# satisfactory-optimizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
src/: main.cpp
src/core/: CMakeLists.txt
src/math/: CMakeLists.txt  matrix.cpp  matrix.h
src/recipes/: CMakeLists.txt  recipes.cpp  recipes.h
src/simplex/: CMakeLists.txt  simplex.cpp  simplex.h
src/utils/: CMakeLists.txt  test_macros.h
tests/: CMakeLists.txt  matrix_test.cpp  simplex_test.cpp
